# agent-0

./: .gitignore  README.md
projects/deploy/: Caddyfile  Caddyfile.https.example  README.md  docker-compose.override.example.yml  docker-compose.template.yml  docker-compose.yml  versions.manifest.json
projects/deploy-docker/: DEPLOYMENT_ENGINEERING.md  DEPLOYMENT_MODEL.md  DEPLOY_LOCAL.md  EXAMPLES.md  MANIFEST_CONTRACT.md  README.md  RENDERING_CONTRACT.md  TROUBLESHOOTING.md
projects/deploy-docker/compose/: README.md  (+4 more)
projects/docker-images/: .gitignore  POC.md  README.md
projects/docker-images/internal/basic-http/: CHANGELOG.md  Dockerfile  README.md  config.md  pyproject.toml
projects/docker-images/internal/basic-http/app/: __init__.py  main.py
projects/docker-images/internal/basic-http/default-site/: README.txt
projects/docker-images/internal/default-html/: CHANGELOG.md  Dockerfile  README.md  config.md  pyproject.toml
projects/docker-images/internal/default-html/app/: main.py
projects/docker-images/internal/default-html/default-site/: error.html  index.html
projects/docker-images/internal/default-html/default-site/api/default/web/: config.json
projects/docker-images/internal/default-html/default-site/assets/: README.md
projects/docker-images/internal/default-html/default-site/config/: defaults.json
projects/docker-images/internal/default-html/default-site/css/: styles.css
projects/docker-images/internal/default-html/default-site/js/: globe.js
projects/docker-images/internal/recon-lab/: Dockerfile  README.md  pyproject.toml
projects/docker-images/internal/recon-lab/app/: __init__.py  main.py  recon.py
projects/docker-images/internal/recon-lab/site/: index.html
projects/docs/: README.md  deploy-entity-schema-migration-plan.md  deploy-vap.md  entity-schema-contract.md  guiding-principles-entity-model.md  nmap-open-ports.md  oracle-vm-setup.md  vap-platform-prototype.md
projects/local-ai/: .env.example  .gitignore  .tool-versions  DOCKER.md  POC.md  README.md  docker-compose.yml  pyproject.toml
projects/local-ai/docs/: phase-4-plan.md
projects/local-ai/sandbox-starters/: hello.py  notes.md
projects/local-ai/scripts/: create-webui-admin-api.sh  fetch_url.py  ollama-serve-bg.sh  setup-phase3-asdf.sh  start-poc.sh  stop-poc.sh  verify-phase1.sh
projects/ollama/: .tool-versions  README.md
(+85 files in other folders)
