[project]
name = "recon-lab"
version = "0.0.3"
description = "Authorized local recon / misconfiguration lab UI (not an exploit kit)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
